<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数据库应用</string>
    <string name="hello_world">Hello world!</string>
    <string name="Button">创建</string>
    <string name="Button1">保存</string>
    <string name="Button2">查找</string>
    <string name="Button3">更新</string>
    <string name="Button4">统计</string>
    <string name="Button5">多条数据</string>
    <string name="Button6">删除记录</string>
    <string name="Button7">PayMent</string>
    
    
    
    

</resources>
