<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true" 
        android:layout_below="@+id/textView1"
        android:layout_marginTop="84dp"
        android:onClick="onClickbutton"
        android:text="@string/Button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/button1"
        android:onClick="saveqlit"
        android:text="@string/Button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginStart="28dp"
        android:layout_toEndOf="@+id/button2"
        android:onClick="findSQlit"
        android:text="@string/Button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true" 
        android:layout_below="@+id/button1"
        android:layout_marginTop="28dp"
        android:onClick="updateSqlit"
        android:text="@string/Button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignStart="@+id/button2" 
        android:onClick="countSqlit"
        android:text="@string/Button4" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignStart="@+id/button3"
        android:onClick="onClickScrollDate"
        android:text="@string/Button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_marginTop="28dp"
        android:layout_toStartOf="@+id/button5"
        android:onClick="onClickDelect"
        android:text="@string/Button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button7"
        android:layout_toStartOf="@+id/button6"
        android:onClick="onClickPayment"
        android:text="@string/Button7" />

</RelativeLayout>